Deployment/CloudFormation/BPS/BPS-on-AWS-2-Arm-Demo-Use-Case-CloudFormation.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "BPS on AWS 2-Arm Test CloudFormation",
	"Mappings" : {
		"RegionMap" : {
			"us-east-1" : {
				"AMIxVBLADE" : "ami-052f9f953b6ea1267",
				"EC2xCONNECTxCIDR" : "18.206.107.24/29",
				"EC2xREGION" : "US East (N. Virginia)",
				"REGIONxTAG" : "US_EAST_1"
			},
			"us-east-2" : {
				"AMIxVBLADE" : "ami-0278b164d4f64e5d0",
				"EC2xCONNECTxCIDR" : "3.16.146.0/29",
				"EC2xREGION" : "US East (Ohio)",
				"REGIONxTAG" : "US_EAST_2"
			},
			"us-west-1" : {
				"AMIxVBLADE" : "ami-061e834f111cfba32",
				"EC2xCONNECTxCIDR" : "13.52.6.112/29",
				"EC2xREGION" : "US West (N. California)",
				"REGIONxTAG" : "US_WEST_1"
			},
			"us-west-2" : {
				"AMIxVBLADE" : "ami-09a14ef74ddddb92b",
				"EC2xCONNECTxCIDR" : "18.237.140.160/29",
				"EC2xREGION" : "US West (Oregon)",
				"REGIONxTAG" : "US_WEST_2"
			},
			"ap-east-1" : {
				"AMIxVBLADE" : "ami-00000000000000000",
				"EC2xCONNECTxCIDR" : "18.206.107.24/29",
				"EC2xREGION" : "Asia Pacific (Hong Kong)",		
				"REGIONxTAG" : "AP_EAST_1"
			},
			"ap-south-1" : {
				"AMIxVBLADE" : "ami-0ba041828e0b0dd41",
				"EC2xCONNECTxCIDR" : "13.233.177.0/29",
				"EC2xREGION" : "Asia Pacific (Mumbai)",
				"REGIONxTAG" : "AP_SOUTH_1"
			},
			"ap-northeast-2" : {
				"AMIxVBLADE" : "ami-085fbadd652e6f030",
				"EC2xCONNECTxCIDR" : "13.209.1.56/29",
				"EC2xREGION" : "Asia Pacific (Seoul)",
				"REGIONxTAG" : "AP_NORTHEAST_2"
			},
			"ap-southeast-1" : {
				"AMIxVBLADE" : "ami-0f2f0b295ce2e30ec",
				"EC2xCONNECTxCIDR" : "3.0.5.32/29",
				"EC2xREGION" : "Asia Pacific (Singapore)",
				"REGIONxTAG" : "AP_SOUTHEAST_1"
			},
			"ap-southeast-2" : {
				"AMIxVBLADE" : "ami-0c76e7186b3551155",
				"EC2xCONNECTxCIDR" : "13.239.158.0/29",
				"EC2xREGION" : "Asia Pacific (Sydney)",
				"REGIONxTAG" : "AP_SOUTHEAST_2"
			},
			"ap-northeast-1" : {
				"AMIxVBLADE" : "ami-01a5b47008d5f6f52",
				"EC2xCONNECTxCIDR" : "3.112.23.0/29",
				"EC2xREGION" : "Asia Pacific (Tokyo)",
				"REGIONxTAG" : "AP_NORTHEAST_1"
			},
			"ca-central-1" : {
				"AMIxVBLADE" : "ami-06209ac8e4960f2a6",
				"EC2xCONNECTxCIDR" : "35.183.92.176/29",
				"EC2xREGION" : "Canada (Central)",
				"REGIONxTAG" : "CA_CENTRAL_1"
			},
			"eu-central-1" : {
				"AMIxVBLADE" : "ami-0b63ff3e157ee0b90",
				"EC2xCONNECTxCIDR" : "3.120.181.40/29",
				"EC2xREGION" : "EU (Frankfurt)",
				"REGIONxTAG" : "EU_CENTRAL_1"
			},
			"eu-west-1" : {
				"AMIxVBLADE" : "ami-028a2495096983cc4",
				"EC2xCONNECTxCIDR" : "18.202.216.48/29",
				"EC2xREGION" : "EU (Ireland)",
				"REGIONxTAG" : "EU_WEST_1"
			},
			"eu-west-2" : {
				"AMIxVBLADE" : "ami-048e7c436085e150d",
				"EC2xCONNECTxCIDR" : "3.8.37.24/29",
				"EC2xREGION" : "EU (London)",
				"REGIONxTAG" : "EU_WEST_2"
			},
			"eu-west-3" : {
				"AMIxVBLADE" : "ami-08b6576959850501b",
				"EC2xCONNECTxCIDR" : "35.180.112.80/29",
				"EC2xREGION" : "EU (Paris)",
				"REGIONxTAG" : "EU_WEST_3"
			},
			"eu-north-1" : {
				"AMIxVBLADE" : "ami-0bf143d947c1d60b3",
				"EC2xCONNECTxCIDR" : "13.48.4.200/30",
				"EC2xREGION" : "EU (Stockholm)",
				"REGIONxTAG" : "EU_NORTH_1"
			},
			"me-south-1" : {
				"AMIxVBLADE" : "ami-00000000000000000",
				"EC2xCONNECTxCIDR" : "18.206.107.24/29",
				"EC2xREGION" : "Middle East (Bahrain)",		
				"REGIONxTAG" : "ME_SOUTH_1"
			},
			"sa-east-1" : {
				"AMIxVBLADE" : "ami-022a36d8d9104fb38",
				"EC2xCONNECTxCIDR" : "13.48.4.200/30",
				"EC2xREGION" : "South America (Sao Paulo)",
				"REGIONxTAG" : "SA_EAST_1"
			}
		},
		"VariableMap" : {
			"local" : {
				"OPTIONSxTAG" : "MANUAL",
				"PROJECTxTAG" : "OPEN_IXIA",
				"VPCxCIDRxBLOCK" : "10.0.0.0/16",
				"VPCxINSTANCExTENANCY" : "default",
				"VPCxENABLExDNSxSUPPORT" : true,
				"VPCxENABLExDNSxHOSTNAMES" : true,
				"PLACEMENTxGROUPxSTRATEGY" : "cluster",
				"FLOWxLOGxRESOURCExTYPE" : "VPC",
				"FLOWxLOGxTRAFFICxTYPE" : "REJECT",
				"SUBNETxAVAILABILITYxZONExINDEX" : "0",
				"CTRLxSUBNETxCIDRxBLOCK" : "10.0.1.0/24",
				"TEST1xSUBNETxCIDRxBLOCK" : "10.0.4.0/24",
				"TEST2xSUBNETxCIDRxBLOCK" : "10.0.5.0/24",
				"INTERFACExSOURCExDESTxCHECK" : false,
				"INSTANCExDISABLExAPIxTERMINATION" : false,
				"INSTANCExMONITORING" : false,
				"INSTANCExINSTANCExINITIATEDxSHUTDOWNxBEHAVIOR" : "stop",
				"INSTANCExBLOCKxDEVICExNAME" : "/dev/sda1",
				"INSTANCExEBSxDELETExONxTERMINATION" : true,
				"INSTANCExEBSxVOLUMExTYPE" : "gp2",
				"APPxTAG" : "BPS",
				"APPxVERSION" : "9.10U2",
				"VBLADE1xETH0xPRIVATExIPxADDRESS" : "10.0.1.11",
				"VBLADE1xETH1xPRIVATExIPxADDRESSES" : "10.0.4.12|10.0.4.13|10.0.4.14|10.0.4.15|10.0.4.16|10.0.4.17|10.0.4.18|10.0.4.19|10.0.4.20|10.0.4.21",
				"VBLADE1xETH2xPRIVATExIPxADDRESSES" : "10.0.5.12|10.0.5.13|10.0.5.14|10.0.5.15|10.0.5.16|10.0.5.17|10.0.5.18|10.0.5.19|10.0.5.20|10.0.5.21",
			}
		}
	},
	"Resources": {
		"PlacementGroup": {
			"Type" : "AWS::EC2::PlacementGroup",
			"Properties" : {
				"Strategy" : { "Fn::FindInMap" : [ "VariableMap", "local", "PLACEMENTxGROUPxSTRATEGY"] }
			}
		},
		"Vpc": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": { "Fn::FindInMap" : [ "VariableMap", "local", "VPCxCIDRxBLOCK"] },
				"InstanceTenancy": { "Fn::FindInMap" : [ "VariableMap", "local", "VPCxINSTANCExTENANCY"] },
				"EnableDnsSupport": { "Fn::FindInMap" : [ "VariableMap", "local", "VPCxENABLExDNSxSUPPORT"] },
				"EnableDnsHostnames": { "Fn::FindInMap" : [ "VariableMap", "local", "VPCxENABLExDNSxHOSTNAMES"] },
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "VPC", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
		"VpcFlowLog" : {
			"Type" : "AWS::EC2::FlowLog",
			"Properties" : {
				"DeliverLogsPermissionArn" : { "Fn::GetAtt" : ["VPCFlowLogAccessRole", "Arn"] },
				"LogGroupName" : { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "VPC_FLOW_LOG", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] },
				"ResourceId" : { "Ref" : "Vpc" },
				"ResourceType" : { "Fn::FindInMap" : [ "VariableMap", "local", "FLOWxLOGxRESOURCExTYPE"] },
				"TrafficType" : { "Fn::FindInMap" : [ "VariableMap", "local", "FLOWxLOGxTRAFFICxTYPE"] }
			}
		},
		"CtrlSubnet": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": { "Fn::Select" : [ { "Fn::FindInMap" : [ "VariableMap", "local", "SUBNETxAVAILABILITYxZONExINDEX"] }, { "Fn::GetAZs" : { "Ref" : "AWS::Region" } } ] },
				"CidrBlock": { "Fn::FindInMap" : [ "VariableMap", "local", "CTRLxSUBNETxCIDRxBLOCK"] },
				"VpcId": {
					"Ref": "Vpc"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "CTRL_SUBNET", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
		"Test1Subnet": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": { "Fn::Select" : [ { "Fn::FindInMap" : [ "VariableMap", "local", "SUBNETxAVAILABILITYxZONExINDEX"] }, { "Fn::GetAZs" : { "Ref" : "AWS::Region" } } ] },
				"CidrBlock": { "Fn::FindInMap" : [ "VariableMap", "local", "TEST1xSUBNETxCIDRxBLOCK"] },
				"VpcId": {
					"Ref": "Vpc"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "TEST1_SUBNET", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
  		"Test2Subnet": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": { "Fn::Select" : [ { "Fn::FindInMap" : [ "VariableMap", "local", "SUBNETxAVAILABILITYxZONExINDEX"] }, { "Fn::GetAZs" : { "Ref" : "AWS::Region" } } ] },
				"CidrBlock": { "Fn::FindInMap" : [ "VariableMap", "local", "TEST2xSUBNETxCIDRxBLOCK"] },
				"VpcId": {
					"Ref": "Vpc"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "TEST2_SUBNET", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
		"CtrlSecurityGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "CTRL_SECURITY_GROUP", 
					{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] },
				"VpcId": {
					"Ref": "Vpc"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "CTRL_SECURITY_GROUP", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
		"CtrlIngress1": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "CtrlSecurityGroup"
				},
				"IpProtocol": "-1",
				"SourceSecurityGroupId": {
					"Ref": "CtrlSecurityGroup"
				}
			}
		},
		"CtrlIngress2": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "CtrlSecurityGroup"
				},
				"IpProtocol": "tcp",
				"FromPort": 22,
				"ToPort": 22,
				"CidrIp": { "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "EC2xCONNECTxCIDR" ] }
			}
		},
		"CtrlIngress22": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "CtrlSecurityGroup"
				},
				"IpProtocol": "tcp",
				"FromPort": 22,
				"ToPort": 22,
				"CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
		},		
		"CtrlIngress8887": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "CtrlSecurityGroup"
				},
				"IpProtocol": "tcp",
				"FromPort": 8887,
				"ToPort": 8887,
				"CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
		},
		"CtrlIngress8889": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "CtrlSecurityGroup"
				},
				"IpProtocol": "tcp",
				"FromPort": 8889,
				"ToPort": 8939,
				"CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
		},
		"CtrlIngress8943": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "CtrlSecurityGroup"
				},
				"IpProtocol": "tcp",
				"FromPort": 8943,
				"ToPort": 8945,
				"CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
		},		
        "Test1SecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "TEST1_SECURITY_GROUP", 
					{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] },
                "VpcId": {
                    "Ref": "Vpc"
                },
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "TEST1_SECURITY_GROUP", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
		"Test1Ingress1": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "Test1SecurityGroup"
				},
				"IpProtocol": "-1",
				"SourceSecurityGroupId": {
					"Ref": "Test1SecurityGroup"
				}
			}
		},
		"DefaultEgress1": {
			"Type" : "AWS::EC2::SecurityGroupEgress",
			"Properties" : {
				"GroupId": { "Fn::GetAtt" : ["Vpc", "DefaultSecurityGroup"] },
				"IpProtocol": "-1",
				"SourceSecurityGroupId": { "Fn::GetAtt" : ["Vpc", "DefaultSecurityGroup"] }
			}
		},
		"InternetGw": {
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "INTERNET_GW", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
		"GwAttach": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"VpcId": {
					"Ref": "Vpc"
				},
				"InternetGatewayId": {
					"Ref": "InternetGw"
				}
			}
		},
		"CtrlRouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "Vpc"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "CTRL_ROUTE_TABLE", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
		"Test1RouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "Vpc"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, "TEST1_ROUTE_TABLE", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
		"CtrlSubnetRouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "CtrlRouteTable"
				},
				"SubnetId": {
					"Ref": "CtrlSubnet"
				}
			}
		},
		"Test1SubnetRouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "Test1RouteTable"
				},
				"SubnetId": {
					"Ref": "Test1Subnet"
				}
			}
		},
		"Test2SubnetRouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "Test1RouteTable"
				},
				"SubnetId": {
					"Ref": "Test2Subnet"
				}
			}
		},
		"BpsVirtualBlade1Eth0": {
			"Type": "AWS::EC2::NetworkInterface",
			"Properties": {
				"Description": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, 
					{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxTAG"] }, "VIRTUAL_BLADE1", 
					{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxVERSION"] }, "ETH0", 
					{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] },
				"SourceDestCheck": { "Fn::FindInMap" : [ "VariableMap", "local", "INTERFACExSOURCExDESTxCHECK"] },
				"SubnetId": {
					"Ref": "CtrlSubnet"
				},
				"GroupSet": [
					{
						"Ref": "CtrlSecurityGroup"
					}
				],
				"PrivateIpAddress": { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH0xPRIVATExIPxADDRESS" ] },
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, 
							{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxTAG"] }, "VIRTUAL_BLADE1", 
							{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxVERSION"] }, "ETH0", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
		"BpsVirtualBlade1Eth1": {
			"Type": "AWS::EC2::NetworkInterface",
			"Properties": {
				"Description": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, 
					{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxTAG"] }, "VIRTUAL_BLADE1", 
					{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxVERSION"] }, "ETH1", 
					{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] },
				"SourceDestCheck": { "Fn::FindInMap" : [ "VariableMap", "local", "INTERFACExSOURCExDESTxCHECK"] },
				"SubnetId": {
					"Ref": "Test1Subnet"
				},
				"GroupSet": [
					{
						"Ref": "Test1SecurityGroup"
					}
				],
				"PrivateIpAddress": { "Fn::Select" : [ "0", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
				"PrivateIpAddresses": [
					{
						"PrivateIpAddress": { "Fn::Select" : [ "1", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "2", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "3", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "4", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "5", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "6", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "7", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "8", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "9", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					}
				],
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, 
							{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxTAG"] }, "VIRTUAL_BLADE1", 
							{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxVERSION"] }, "ETH1", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
		"BpsVirtualBlade1Eth2": {
			"Type": "AWS::EC2::NetworkInterface",
			"Properties": {
				"Description": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, 
					{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxTAG"] }, "VIRTUAL_BLADE1", 
					{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxVERSION"] }, "ETH2", 
					{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] },
				"SourceDestCheck": { "Fn::FindInMap" : [ "VariableMap", "local", "INTERFACExSOURCExDESTxCHECK"] },
				"SubnetId": {
					"Ref": "Test2Subnet"
				},
				"GroupSet": [
					{
						"Ref": "Test1SecurityGroup"
					}
				],
				"PrivateIpAddress": { "Fn::Select" : [ "0", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH2xPRIVATExIPxADDRESSES" ] } ] } ] },
				"PrivateIpAddresses": [
					{
						"PrivateIpAddress": { "Fn::Select" : [ "1", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH2xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "2", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH2xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "3", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH2xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "4", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH2xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "5", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH2xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "6", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH2xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "7", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH2xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "8", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH2xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "9", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VBLADE1xETH2xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					}
				],
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, 
							{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxTAG"] }, "VIRTUAL_BLADE1", 
							{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxVERSION"] }, "ETH2", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				]
			}
		},
		"BpsVirtualBlade1": {
			"Type": "AWS::EC2::Instance",
			"Properties": {
				"DisableApiTermination": { "Fn::FindInMap" : [ "VariableMap", "local", "INSTANCExDISABLExAPIxTERMINATION"] },
				"InstanceInitiatedShutdownBehavior": { "Fn::FindInMap" : [ "VariableMap", "local", "INSTANCExINSTANCExINITIATEDxSHUTDOWNxBEHAVIOR"] },
				"ImageId": { "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "AMIxVBLADE"] },
				"InstanceType": { "Ref" : "BPSvBladeInstanceType" },
				"Monitoring": { "Fn::FindInMap" : [ "VariableMap", "local", "INSTANCExMONITORING"] },
				"PlacementGroupName" : { "Ref" : "PlacementGroup" },
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }, 
							{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxTAG"] }, "VIRTUAL_BLADE1", 
							{ "Fn::FindInMap" : [ "VariableMap", "local", "APPxVERSION"] }, 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "local", "PROJECTxTAG"] }
					}
				],
				"UserData": "",
				"NetworkInterfaces": [
					{
						"NetworkInterfaceId": {
							"Ref": "BpsVirtualBlade1Eth0"
						},
						"DeviceIndex": "0"
					},
					{
						"NetworkInterfaceId": {
							"Ref": "BpsVirtualBlade1Eth1"
						},
						"DeviceIndex": "1"
					},
					{
						"NetworkInterfaceId": {
							"Ref": "BpsVirtualBlade1Eth2"
						},
						"DeviceIndex": "2"
					}
				],
				"BlockDeviceMappings" : [
					{
						"DeviceName" : { "Fn::FindInMap" : [ "VariableMap", "local", "INSTANCExBLOCKxDEVICExNAME"] },
						"Ebs" : { 
							"DeleteOnTermination" : { "Fn::FindInMap" : [ "VariableMap", "local", "INSTANCExEBSxDELETExONxTERMINATION"] },
							"VolumeType" : { "Fn::FindInMap" : [ "VariableMap", "local", "INSTANCExEBSxVOLUMExTYPE"] }
						}
					}
				]   
			}
		},
		"BpsVirtualBlade1Eth0ElasticIp": {
			"Type": "AWS::EC2::EIP",
			"DependsOn": [
				"GwAttach",
				"BpsVirtualBlade1"
			],
			"Properties": {
				"Domain": "vpc"
			}
		},
		"BpsVirtualBlade1Eth0ElasticIpAssociation": {
			"Type": "AWS::EC2::EIPAssociation",
			"Properties": {
				"AllocationId": {
					"Fn::GetAtt": [
						"BpsVirtualBlade1Eth0ElasticIp",
						"AllocationId"
					]
				},
				"NetworkInterfaceId": {
					"Ref": "BpsVirtualBlade1Eth0"
				}
			}
		},
		"VPCFlowLogAccessRole": {
            "Properties": {
                "AssumeRolePolicyDocument": {
                    "Statement": [
                        {
                            "Action": "sts:AssumeRole",
                            "Effect": "Allow",
                            "Principal": {
                                "Service": "vpc-flow-logs.amazonaws.com"
                            }
                        }
                    ],
                    "Version": "2012-10-17"
                },
                "ManagedPolicyArns": [
                    "arn:aws:iam::aws:policy/CloudWatchLogsFullAccess"
                ],
                "Path": "/"
            },
            "Type": "AWS::IAM::Role"
        }
	},
	"Metadata" : {
		"AWS::CloudFormation::Interface" : {	
            "ParameterGroups": [
                {
                    "Label": {
                        "default": "User Tag Configuration"
                    },
                    "Parameters": [
                        "UserEmailTag",
						"UserLoginTag"
                    ]
                },
                {
                    "Label": {
                        "default": "BreakingPoint Virtual Blade Instance Configuration"
                    },
                    "Parameters": [
                        "BPSvBladeInstanceType"
                    ]
                },
                {
                    "Label": {
                        "default": "Security Group Configuration"
                    },
                    "Parameters": [
                        "InboundIPv4CidrBlock"
                    ]
                }				
			],
			"ParameterLabels": {
				"UserEmailTag": {
					"default": "User Email Tag"
				},
				"UserLoginTag": {
					"default": "User Login Tag"
				},
				"BPSvBladeInstanceType": {
					"default": "Virtual Blade Instance Type"
				},
				"InboundIPv4CidrBlock": {
					"default": "Inbound IPv4 CIDR Block"
				}
			}
        }
    },
    "Parameters" : {
        "UserEmailTag" : {
        "Description" : "Email address tag of user creating the stack",
        "MinLength": "14",
        "Type" : "String"
      },
        "UserLoginTag" : {
        "Description" : "Login ID tag of user creating the stack",
        "MinLength": "4",
        "Type" : "String"
      },
        "BPSvBladeInstanceType" : {
        "Description" : "Instance type of BPS Virtual Blade VM",
        "Type" : "String",
        "AllowedValues": [
			"i3.8xlarge",
			"c5n.xlarge",
			"c5.xlarge"
        ],
        "Default" : "c5n.xlarge"
      },
        "InboundIPv4CidrBlock" : {
        "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
        "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x.",
        "Description" : "IP Address /32 or IP CIDR range connecting inbound to Ixia Client",
        "MaxLength": "18",
        "MinLength": "9",
		"Type" : "String"
      }
    },
	"Outputs": {
		"BpsVirtualBlade1": {
			"Description": "KEY_BPS_VIRTUAL_BLADE1_PRIVATE_IP",
			"Value": {
				"Fn::GetAtt": [
					"BpsVirtualBlade1",
					"PrivateIp"
				]
			}
		}
	}
}
